# WorldExtender

./: .gitignore  README.md  THIRD-PARTY-NOTICES.md
code/code/: CMakeLists.txt  CMakeSettings.json
code/code/assets/shaders/: UIShader.frag  UIShader.vert  fragmentShader.frag  playerShader.frag  playerShader.vert  textureVertShader.vert  vertexShader.vert
code/code/assets/shaders/shaded/: vertexShader.vert
code/code/docs/: Doxyfile
code/code/engine/: CMakeLists.txt
code/code/engine/include/engine/: Assets.h  BaseGame.h  Camera.h  InputManager.h  Logger.h  Random.h  Settings.h
code/code/engine/include/engine/entities/: Entity.h
code/code/engine/include/engine/physics/: Collider.h  (+1 more)
code/code/engine/src/: BaseGame.cpp  Camera.cpp  InputManager.cpp  Logger.cpp
code/code/engine/src/entities/: Entity.cpp
code/code/engine/src/physics/: Collider.cpp  ContactListener.cpp
code/code/engine/src/rendering/: Animator.cpp  Mesh.cpp  Shader.cpp  Texture.cpp  TextureAtlas.cpp
code/code/engine/src/tileMap/: Area.cpp  Chunk.cpp  Generator.cpp  Tile.cpp  TileMap.cpp
code/code/engine/src/ui/: Canvas.cpp  UI.cpp
code/code/game/: CMakeLists.txt
code/code/game/src/: Game.cpp  Game.h  Parameters.h  main.cpp
code/code/game/src/entities/: Player.cpp  Player.h
code/code/game/src/interaction/: InteractionManager.cpp  InteractionManager.h  ResourceCostManager.cpp  ResourceCostManager.h
code/code/game/src/inventory/: Inventory.cpp  Inventory.h
code/code/game/src/tilemap/: Island.cpp  Island.h  IslandManager.cpp  IslandManager.h  IslandTileMap.cpp  IslandTileMap.h
(+35 files in other folders)
